{
  "version": 4,
  "terraform_version": "1.8.5",
  "serial": 156,
  "lineage": "5d984b10-8ef3-70ff-a150-ea7c569d2650",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "openremote_elastic_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00f14fd0987555094",
            "association_id": "eipassoc-0eea22c2245bbd620",
            "domain": "vpc",
            "id": "eipalloc-00f14fd0987555094",
            "instance": "i-03375fc136b23cb48",
            "network_border_group": "us-east-1",
            "network_interface": "eni-04ed474142bf5572d",
            "private_dns": "ip-172-16-165-125.ec2.internal",
            "private_ip": "172.16.165.125",
            "public_dns": "ec2-3-83-200-251.compute-1.amazonaws.com",
            "public_ip": "3.83.200.251",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "OpenRemote"
            },
            "tags_all": {
              "Name": "OpenRemote"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_instance.openremote_ec2",
            "aws_security_group.openremote_security_group",
            "aws_subnet.openremote_subnet",
            "aws_vpc.openremote_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "openremote_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-055e62b4ea2fe95fd",
            "arn": "arn:aws:ec2:us-east-1:058264271517:instance/i-03375fc136b23cb48",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03375fc136b23cb48",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t4g.medium",
            "ipv6_address_count": 0,
            "key_name": "OpenRemote",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-04ed474142bf5572d",
            "private_dns": "ip-172-16-165-125.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.16.165.125",
            "public_dns": "ec2-18-215-243-28.compute-1.amazonaws.com",
            "public_ip": "18.215.243.28",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-078a1fa873d3e6559",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0523c026852202984"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08a68cbdc9a528bd5",
            "tags": {
              "Name": "OpenRemote"
            },
            "tags_all": {
              "Name": "OpenRemote"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0523c026852202984"
            ]
          },
          "dependencies": [
            "aws_security_group.openremote_security_group",
            "aws_subnet.openremote_subnet",
            "aws_vpc.openremote_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "openremote_igateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264271517:internet-gateway/igw-005286ba0ac62dbbd",
            "id": "igw-005286ba0ac62dbbd",
            "owner_id": "058264271517",
            "tags": {
              "Name": "OpenRemote"
            },
            "tags_all": {
              "Name": "OpenRemote"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "openremote_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-005286ba0ac62dbbd",
            "id": "r-rtb-0fc8e16f86b8cda881080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0fc8e16f86b8cda88",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.openremote_igateway",
            "aws_route_table.openremote_route_table",
            "aws_vpc.openremote_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "openremote_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264271517:route-table/rtb-0fc8e16f86b8cda88",
            "id": "rtb-0fc8e16f86b8cda88",
            "owner_id": "058264271517",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "OpenRemote"
            },
            "tags_all": {
              "Name": "OpenRemote"
            },
            "timeouts": null,
            "vpc_id": "vpc-079a8c080e8debb53"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.openremote_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "openremote_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09c0b2d55bb08b52c",
            "route_table_id": "rtb-0fc8e16f86b8cda88",
            "subnet_id": "subnet-08a68cbdc9a528bd5"
          },
          "dependencies": [
            "aws_route_table.openremote_route_table",
            "aws_subnet.openremote_subnet",
            "aws_vpc.openremote_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "openremote_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264271517:security-group/sg-0523c026852202984",
            "description": "OpenRemote Security Group",
            "egress": [],
            "id": "sg-0523c026852202984",
            "ingress": [],
            "name": "OpenRemote",
            "name_prefix": "",
            "owner_id": "058264271517",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-079a8c080e8debb53"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.openremote_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "openremote_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264271517:subnet/subnet-08a68cbdc9a528bd5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.16.0.0/16",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08a68cbdc9a528bd5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "058264271517",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "OpenRemote"
            },
            "tags_all": {
              "Name": "OpenRemote"
            },
            "vpc_id": "vpc-079a8c080e8debb53"
          },
          "dependencies": [
            "aws_vpc.openremote_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "openremote_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264271517:vpc/vpc-079a8c080e8debb53",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-00ec9d61066613c56",
            "default_route_table_id": "rtb-0097e950c7b9c2da5",
            "default_security_group_id": "sg-04cd9bf93d0a90e7f",
            "dhcp_options_id": "dopt-085783ea8bce74731",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-079a8c080e8debb53",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0097e950c7b9c2da5",
            "owner_id": "058264271517",
            "tags": {
              "Name": "OpenRemote"
            },
            "tags_all": {
              "Name": "OpenRemote"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "HTTPAccess",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264271517:security-group-rule/sgr-099bf3ac6321c0b83",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "HTTP Access",
            "from_port": 80,
            "id": "sgr-099bf3ac6321c0b83",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0523c026852202984",
            "security_group_rule_id": "sgr-099bf3ac6321c0b83",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.openremote_security_group",
            "aws_vpc.openremote_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "HTTPSAccess",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264271517:security-group-rule/sgr-0e1d672ffc11087b3",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "HTTPS Access",
            "from_port": 443,
            "id": "sgr-0e1d672ffc11087b3",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0523c026852202984",
            "security_group_rule_id": "sgr-0e1d672ffc11087b3",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.openremote_security_group",
            "aws_vpc.openremote_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "MQTTAccess",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264271517:security-group-rule/sgr-0bd316d389e728d4e",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "MQTT Access",
            "from_port": 8883,
            "id": "sgr-0bd316d389e728d4e",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0523c026852202984",
            "security_group_rule_id": "sgr-0bd316d389e728d4e",
            "tags": null,
            "tags_all": {},
            "to_port": 8883
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.openremote_security_group",
            "aws_vpc.openremote_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "SNMPAccess",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264271517:security-group-rule/sgr-09df5227280dbf4d6",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "SNMP Access",
            "from_port": 162,
            "id": "sgr-09df5227280dbf4d6",
            "ip_protocol": "udp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0523c026852202984",
            "security_group_rule_id": "sgr-09df5227280dbf4d6",
            "tags": null,
            "tags_all": {},
            "to_port": 162
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.openremote_security_group",
            "aws_vpc.openremote_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "SSHLocation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264271517:security-group-rule/sgr-05af302b75094aad3",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "SSH Access",
            "from_port": 22,
            "id": "sgr-05af302b75094aad3",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0523c026852202984",
            "security_group_rule_id": "sgr-05af302b75094aad3",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.openremote_security_group",
            "aws_vpc.openremote_vpc"
          ]
        }
      ]
    }
  ]
}